--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       - numpy
       - matplotlib
       - paths:
-        - ./detect.py
+        - ./detect1.py
     </py-env>
   </head>
   <body>
-    <py-script src="./detect.py"></py-script>
+    <py-script src="./detect1.py"></py-script>
   </body>
 </html>
